# cc_news

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.cursor/commands/: implement-next.md  prune-branches.md  research.md  validate.md
.cursor/skills/code-quality/: SKILL.md
.cursor/skills/commits/: SKILL.md  conventional-commits.md
.cursor/skills/refine-product-strategy/: SKILL.md  examples.md  templates.md
.cursor/skills/write-unit-tests/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  generate-docs.yml
cc_news_analyzer/: __init__.py  cli.py  generate_docs.py  index.py  warc.py
notebooks/: explore.ipynb
plans/: 2026-02-12-refine-product-strategy-skill.md
product/idea-inbox/: feb-12-input.md
product/idea-inbox/processed/: high-level-concept-feb-7-2026.md
product/strategy-vision/: decisions.md  index.md  principles.md  roadmap.md  strategy.md  vision.md
research/: cli-doc-generation.md
tests/: test_cli.py  test_generate_docs.py  test_index.py  test_warc.py
