[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-news-analyzer"
version = "0.1.0"
description = "A CLI tool for analyzing Common Crawl News (CC-NEWS) WARC datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "warcio>=1.7.4",
    "click>=8.1.0",
    "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
cc-news = "cc_news_analyzer.cli:cli"
cc-news-docs = "cc_news_analyzer.generate_docs:main"

[tool.setuptools.packages.find]
include = ["cc_news_analyzer*"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["cc_news_analyzer", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.pytest.ini_options]
testpaths = ["tests"]
